crates/swc_css_parser/tests/errors/selector/pseudo-element/between/output.stderr
error: Expected function or ident tokens
 --> $DIR/tests/errors/selector/pseudo-element/between/input.css:1:2
  |
1 | : :foo {
  |  ^

